--- a/app/src/main/res/layout/activity_frm_login.xml
+++ b/app/src/main/res/layout/activity_frm_login.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<androidx.core.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -26,6 +33,7 @@
         style="@style/Edit_Text"
         android:hint="Email"
         android:drawableRight="@drawable/ic_email"
+        android:inputType="textEmailAddress"
         app:layout_constraintStart_toStartOf="@id/containerComponents"
         app:layout_constraintEnd_toEndOf="@id/containerComponents"
         app:layout_constraintTop_toTopOf="@id/containerComponents"/>
@@ -33,8 +41,9 @@
     <EditText
         android:id="@+id/edit_senha"
         style="@style/Edit_Text"
-        android:hint="Email"
+        android:hint="Senha"
         android:drawableRight="@drawable/ic_eye"
+        android:inputType="numberPassword"
         app:layout_constraintStart_toStartOf="@id/containerComponents"
         app:layout_constraintEnd_toEndOf="@id/containerComponents"
         app:layout_constraintTop_toBottomOf="@id/edit_email"/>
@@ -42,10 +51,6 @@
         android:id="@+id/btn_entrar"
         style="@style/Button"
         android:text="@string/entrar"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_senha"/>
@@ -57,13 +62,15 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/containerComponents"/>
+        app:layout_constraintTop_toBottomOf="@id/containerComponents"
+        android:visibility="invisible"
+        />
     <TextView
         android:id="@+id/text_tela_cadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_cadastro"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
@@ -72,3 +79,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
